[package]
name = "http-no-std"
version = "0.1.0"
edition = "2021"
description = "Minimalist HTTP client for no-std and WASM environments"
categories = ["no-std", "wasm", "web-programming"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
alloc = { version = "1.0.0", package = "rustc-std-workspace-alloc", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
] }

[features]
default = ["std"]
std = ["serde/std", "serde_json/std"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
alloc = ["dep:alloc"]
